--- a/src/app/layout/current-benefits/current-benefits.component.html
+++ b/src/app/layout/current-benefits/current-benefits.component.html
@@ -1,21 +1,20 @@
-
-
 <div class="main-page">
-    <div class="categories">
-      @for (category of categorylist; track category){
-      <button
-        [class.active]="isCategorySelected(category)"
-        (click)="toggleCategory(category)">
-        {{category}}
-      </button>
-      }
-    </div>
+  <div class="categories">
+    <button
+      *ngFor="let category of categorylist"
+      [class.active]="isCategorySelected(category)"
+      (click)="toggleCategory(category)"
+    >
+      {{ category }}
+    </button>
+  </div>
   <div class="most-popular">
     <div class="most-popular__cards">
-      <app-benefits-cards [deadLine]="true" [cards]="filteredMostPopularCards"></app-benefits-cards>
+      <app-benefits-cards
+        [deadLine]="true"
+        [cards]="filteredMostPopularCards"
+        [isLinkCard]="true"
+      ></app-benefits-cards>
     </div>
   </div>
-
-
 </div>
-
