--- a/src/app/layout/catalog/catalog.component.scss
+++ b/src/app/layout/catalog/catalog.component.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/scss/properties";
 
-.main-page{
+.main-page {
   @include flexbox;
   @include flex-direction(column);
 
@@ -16,7 +16,7 @@
     @include align-items(center);
     @include gap(16px);
     border-radius: 8px;
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
     padding: 8px;
     background-color: $primary-white;
 
@@ -33,47 +33,45 @@
         background-color: $neutral-200;
       }
 
-
       &.active {
-        background-color:  $neutral-900;
+        background-color: $neutral-900;
         color: $primary-white;
       }
     }
   }
 
-  .banner{
+  .banner {
     @include flexbox;
     @include align-items(center);
     border-radius: 16px;
     height: 160px;
 
-    .banner-content{
+    .banner-content {
       padding: 44px 40px;
       color: $primary-white;
       @include heading_2;
     }
-
   }
 
-  .most-popular{
+  .most-popular {
     @include flexbox;
     @include flex-direction(column);
     @include gap(16px);
 
-    &__title{
+    &__title {
       font-size: 20px;
-      font-family: 'Inter-regular';
+      font-family: "Inter-regular";
     }
   }
 
-  .recommendations{
+  .recommendations {
     @include flexbox;
     @include flex-direction(column);
     @include gap(16px);
 
-    &__title{
+    &__title {
       font-size: 20px;
-      font-family: 'Inter-regular';
+      font-family: "Inter-regular";
     }
   }
 }
