--- a/src/app/layout/current-benefits/current-benefits.component.scss
+++ b/src/app/layout/current-benefits/current-benefits.component.scss
@@ -18,7 +18,7 @@
       @include align-items(center);
       @include gap(16px);
       border-radius: 8px;
-      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
       padding: 8px;
       background-color: $primary-white;
 
