--- a/src/app/shared/components/accordion-card/accordion-card.component.scss
+++ b/src/app/shared/components/accordion-card/accordion-card.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/scss/properties";
 
 .accordion-card {
-@include flexbox;
+  @include flexbox;
   flex-wrap: wrap;
   gap: 16px;
   width: 100%;
@@ -9,149 +9,140 @@
   user-select: none;
   @include justify-content(center);
 
-  .accordion-card-container{
-
+  .accordion-card-container {
     width: 48.9%;
-
+    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
+    border-radius: 16px;
 
     .menu {
-
       min-height: 56px;
+      border-radius: 16px;
 
-    position: relative;
-    cursor: pointer;
-    transition: all 0.4s ease;
+      position: relative;
+      cursor: pointer;
+      transition: all 0.4s ease;
 
-    border-radius: 16px;
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
-    padding: 24px;
-    background-color: $primary-white;
+      padding: 24px;
+      background-color: $primary-white;
 
+      svg {
+        transition: rotate 0.3s ease;
+      }
 
-    svg {
-      transition: rotate 0.3s ease;
-    }
-
-      .plusminus-container{
+      .plusminus-container {
         padding: 8px;
         background-color: $neutral-100;
         border-radius: 8px;
 
-    .plusminus {
-      position: relative;
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
+        .plusminus {
+          position: relative;
+          width: 20px;
+          height: 20px;
+          cursor: pointer;
 
-      &:before , &:after {
-        content: "";
-        display: block;
-        background-color: #333;
-        position: absolute;
-        top: 50%; left: 0;
-        transition: .35s;
-        width: 100%;
-        height: 3px;
+          &:before,
+          &:after {
+            content: "";
+            display: block;
+            background-color: #333;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transition: 0.35s;
+            width: 100%;
+            height: 3px;
+          }
 
+          &:before {
+            transform: translateY(-50%);
+          }
+
+          // Вертикальная линия по умолчанию (плюс)
+          &:after {
+            transform: translateY(-50%) rotate(90deg);
+          }
+        }
       }
-
-      &:before {
-        transform: translateY(-50%);
-      }
-
-      // Вертикальная линия по умолчанию (плюс)
-      &:after {
-        transform: translateY(-50%) rotate(90deg);
-      }}
-
-    }
-
-
 
       &.opened {
-        .plusminus-container{
+        .plusminus-container {
           background-color: $brand-900;
-      .plusminus {
-
-        &:after {
-          transform: translateY(-50%) rotate(0deg);
-          background-color: $primary-white;
-
+          .plusminus {
+            &:after {
+              transform: translateY(-50%) rotate(0deg);
+              background-color: $primary-white;
+            }
+          }
         }
-
-      }}
-      .content {
-        margin-top: 24px;
+        .content {
+          margin-top: 24px;
+        }
       }
-    }
 
-    &__title {
-      @include flexbox;
-      @include justify-content(space-between);
-      @include align-items(center);
-      width: 100%;
-      @include heading_4_regular;
-    }
+      &__title {
+        @include flexbox;
+        @include justify-content(space-between);
+        @include align-items(center);
+        width: 100%;
+        @include heading_4_regular;
+      }
 
-    ::ng-deep .content {
-      @include flexbox;
-      @include flex-direction(column);
-      @include gap(8px);
-      position: relative;
-      overflow: hidden;
-      transition: height 0.4s ease;
-
-      .content-text {
-
-        @include description;
-        color: $neutral-600;
+      ::ng-deep .content {
         @include flexbox;
         @include flex-direction(column);
-        @include gap(12px);
+        @include gap(8px);
+        position: relative;
+        overflow: hidden;
+        transition: height 0.4s ease;
 
-        a {
-          color: $primary-black;
-          text-decoration-line: underline;
-          transition: 0.3s;
-
-
-        }
-
-        ul {
+        .content-text {
+          @include description;
+          color: $neutral-600;
           @include flexbox;
           @include flex-direction(column);
-          @include gap(8px);
-          padding-left: 24px;
+          @include gap(12px);
+
+          a {
+            color: $primary-black;
+            text-decoration-line: underline;
+            transition: 0.3s;
+          }
 
           ul {
             @include flexbox;
             @include flex-direction(column);
-            @include gap(4px);
-            padding: 0 40px;
-            list-style-type: "  -  ";
+            @include gap(8px);
+            padding-left: 24px;
+
+            ul {
+              @include flexbox;
+              @include flex-direction(column);
+              @include gap(4px);
+              padding: 0 40px;
+              list-style-type: "  -  ";
+            }
           }
         }
-      }
 
-      .icon-links {
-        @include flexbox;
-        @include gap(16px);
+        .icon-links {
+          @include flexbox;
+          @include gap(16px);
 
-        a {
-          border-radius: 50px;
+          a {
+            border-radius: 50px;
+          }
 
-        }
+          svg {
+            height: 28px;
+            width: 28px;
+            rotate: 0deg;
 
-        svg {
-          height: 28px;
-          width: 28px;
-          rotate: 0deg;
-
-          path {
-            fill: $primary-white;
+            path {
+              fill: $primary-white;
+            }
           }
         }
       }
     }
-  }}
+  }
 }
