--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,7 +1,6 @@
 @import "./colors";
 @import "./font-family";
 
-
 @mixin font-($fontSize, $lineHeight) {
   font-size: $fontSize;
   line-height: $lineHeight;
@@ -9,62 +8,67 @@
 
 @mixin heading_1 {
   @include font-(48px, 48px);
-  font-family: 'Inter-extrabold';
+  font-family: "Inter-extrabold";
 }
 
 @mixin heading_2 {
   @include font-(30px, 36px);
-  font-family: 'Inter-semibold';
+  font-family: "Inter-semibold";
 }
 
 @mixin heading_3 {
   @include font-(24px, 32px);
-  font-family: 'Inter-semibold';
+  font-family: "Inter-semibold";
 }
 
 @mixin heading_4 {
   @include font-(20px, 28px);
-  font-family: 'Inter-semibold';
+  font-family: "Inter-semibold";
 }
 
 @mixin heading_4_regular {
   @include font-(20px, 28px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin paragraph {
   @include font-(16px, 24px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin paragraph-semibold {
   @include font-(16px, 24px);
-  font-family: 'Inter-semibold';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin xxs {
   @include font-(12px, 14px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
-
-
 
 @mixin description {
   @include font-(14px, 22px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin lead {
   @include font-(20px, 28px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin small {
   @include font-(14px, 16px);
-  font-family: 'Inter-regular';
+  font-family: "Inter-light";
+  font-weight: 600;
 }
 
 @mixin lead-semibold {
   @include font-(20px, 28px);
-  font-family: 'Inter-semibold';
+  font-family: "Inter-semibold";
 }
