--- a/src/app/layout/catalog/catalog.component.scss
+++ b/src/app/layout/catalog/catalog.component.scss
@@ -14,13 +14,14 @@
   .categories {
     @include flexbox;
     @include align-items(center);
-    @include gap(16px);
+    @include justify-content(space-between);
     border-radius: 8px;
     box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
     padding: 8px;
     background-color: $primary-white;
 
     button {
+      @include lead;
       padding: 8px 16px;
       background-color: $primary-white;
       border: none;
