--- a/src/app/layout/current-benefits/current-benefits.component.scss
+++ b/src/app/layout/current-benefits/current-benefits.component.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/scss/properties";
 
-.main-page{
+.main-page {
   @include flexbox;
   @include flex-direction(column);
 
@@ -12,74 +12,68 @@
   overflow-y: auto; // Добавьте скроллинг по вертикали
   height: 83vh;
 
+  .categories {
+    @include flexbox;
+    @include align-items(center);
+    @include justify-content(space-between);
+    border-radius: 8px;
+    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
+    padding: 8px;
+    background-color: $primary-white;
 
-    .categories {
-      @include flexbox;
-      @include align-items(center);
-      @include gap(16px);
-      border-radius: 8px;
-      box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
-      padding: 8px;
+    button {
+      @include lead;
+      padding: 8px 16px;
       background-color: $primary-white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      color: $neutral-400;
+      transition: background-color 0.3s;
 
-      button {
-        padding: 8px 16px;
-        background-color: $primary-white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        color: $neutral-400;
-        transition: background-color 0.3s;
+      &:hover {
+        background-color: $neutral-200;
+      }
 
-        &:hover {
-          background-color: $neutral-200;
-        }
-
-
-        &.active {
-          background-color:  $neutral-900;
-          color: $primary-white;
-        }
+      &.active {
+        background-color: $neutral-900;
+        color: $primary-white;
       }
     }
   }
+}
 
+.banner {
+  @include flexbox;
+  @include align-items(center);
+  border-radius: 16px;
+  height: 160px;
 
-  .banner{
-    @include flexbox;
-    @include align-items(center);
-    border-radius: 16px;
-    height: 160px;
-
-    .banner-content{
-      padding: 44px 40px;
-      color: $primary-white;
-      @include heading_2;
-    }
-
+  .banner-content {
+    padding: 44px 40px;
+    color: $primary-white;
+    @include heading_2;
   }
+}
 
-  .most-popular{
-    @include flexbox;
-    @include flex-direction(column);
-    @include gap(16px);
+.most-popular {
+  @include flexbox;
+  @include flex-direction(column);
+  @include gap(16px);
 
-    &__title{
-      font-size: 20px;
-      font-family: 'Inter-regular';
-    }
+  &__title {
+    font-size: 20px;
+    font-family: "Inter-regular";
   }
+}
 
-  .recommendations{
-    @include flexbox;
-    @include flex-direction(column);
-    @include gap(16px);
+.recommendations {
+  @include flexbox;
+  @include flex-direction(column);
+  @include gap(16px);
 
-    &__title{
-      font-size: 20px;
-      font-family: 'Inter-regular';
-    }
+  &__title {
+    font-size: 20px;
+    font-family: "Inter-regular";
   }
-
-
-
+}
