--- a/src/app/shared/components/coins/coins.component.scss
+++ b/src/app/shared/components/coins/coins.component.scss
@@ -1,30 +1,45 @@
 @import "../../../../assets/scss/properties";
 
-a{
+a {
   color: $primary-black;
-  text-decoration: none
+  text-decoration: none;
 }
-.coins-container {
-
-    width: 86px;
-
+.coins-container-link {
+  width: 86px;
 
   .coins {
     @include flexbox;
     @include align-items(center);
     @include gap(8px);
     background-color: $brand-100;
-    border-radius: 6px;
+    border-radius: 8px;
     padding: 10px 16px;
 
-    @include lead;
-
+    @include font-(20px, 28px);
+    font-family: "Inter-regular";
+    font-weight: 100;
 
     svg-icon {
       width: 24px;
       height: 24px;
     }
+  }
+}
 
+.coins-container {
+  .coins {
+    @include flexbox;
+    @include align-items(center);
+    @include gap(8px);
+    background-color: $brand-100;
+    border-radius: 8px;
+    padding: 10px 16px;
 
+    @include small;
+
+    svg-icon {
+      width: 24px;
+      height: 24px;
+    }
   }
 }
