--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,9 +15,16 @@
     <div class="coins">
       <app-coins [isLink]="true" [coins]="10" />
     </div>
-    <div class="account-image" (click)="toggleDropdown()">
+    <div class="account-image" (click)="openModal()">
       <svg-icon src="assets/icons/account/account-logo.svg" />
-      <app-header-menu [isVisible]="isDropdownVisible"> </app-header-menu>
     </div>
+    <app-primary-button
+      theme="dark"
+      styling="standard"
+      [label]="'Купить'"
+      type="routerLink"
+      (click)="openModal()"
+    />
   </div>
 </div>
+<app-header-menu [(visible)]="purchaseSuccessModalVisible"></app-header-menu>
